--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <img src="/assets/images/profile.png" alt="My Profile" class="profile-image">
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
@@ -33,11 +34,22 @@
         </nav>
         
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+        <p class="view"><a href="{{ site.github.repository_url }}">
+          <img src="{{ '/assets/images/github_icon.png' | relative_url }}" alt="GitHub" width="26" height="26" style="vertical-align: middle; margin-right: 8px;">
+          View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
+        <p class="view">
+          <a href="{{ site.linkedin_url }}" target="_blank" rel="noopener">
+            <img src="{{ '/assets/images/linkedin_icon.png' | relative_url }}" alt="LinkedIn" width="26" height="26" style="vertical-align: middle; margin-right: 8px;">
+            View My LinkedIn Profile
+          </a>
+        </p>        
+        
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">
+          <img src="{{ '/assets/images/github_icon.png' | relative_url }}" alt="GitHub" width="26" height="26" style="vertical-align: middle; margin-right: 8px;">
+          View My GitHub Profile</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
