To execute animation of slider: renamed js file to not use the default on gihub pages added respective path of js in default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,8 @@
         {% endif %}
       </footer>
     </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <!-- Commented to check if slider animation works locally and on github pages -->
+    <!--script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script-->
+    <script src="{{ "/assets/js/skills.js" | relative_url }}" defer></script>
   </body>
 </html>
