--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
@@ -74,6 +74,7 @@
     </div>
     <!-- Commented to check if slider animation works locally and on github pages -->
     <!--script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script-->
-    <script src="{{ "/assets/js/skills.js" | relative_url }}" defer></script>
+    <script src="{{ '/assets/js/skills.js' | relative_url }}" defer></script>
+    <script src="{{ '/assets/js/project_filter.js' | relative_url }}" defer></script>
   </body>
 </html>
