Added styling image, TOC, inline-code and for post related stuff, added kramdown in _config.yaml to make use of TOC in post, added post-content style in default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
       </header>
       <section>
 
-      {{ content }}
+      <element class="post-content">{{ content }}</element>
 
       </section>
       <footer>
