Published Pybind11 article | removed unnecessary comments from _cofig.yaml and othre minor changes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -274,7 +274,7 @@ body.loaded .skill-level {
 /* Hover effect */
 #markdown-toc a:hover {
   text-decoration: underline;
-  color: #003366;
+  color: #4093f8;
 }
 
 // Code block styling
